# cctv-notifications-app

CctvNotificationsApp/: .gitignore  app.json  metro.config.js  package-lock.json  package.json
CctvNotificationsApp/android/: settings.gradle
CctvNotificationsApp/android/app/: build.gradle
CctvNotificationsApp/android/app/src/main/: AndroidManifest.xml
CctvNotificationsApp/android/app/src/main/java/pl/dawidstachowiak/cctv_notifications_app/: MainActivity.kt  MainApplication.kt
CctvNotificationsApp/android/app/src/main/res/values/: strings.xml
CctvNotificationsApp/app/: db-service.ts  index.tsx  models.ts  notificationsList.tsx
android app/: .eslintrc.js  .gitignore  App.tsx  app.json  db-service.ts  index.js  notificationsList.tsx  package-lock.json  package.json
android-app/: .gitignore  app.json  package-lock.json  package.json
android-app/app/: constants.ts  index.tsx
api/: .gitignore  bootstrap.php  composer.json  settings.php  test.php
api/public/: index.php
api/src/: MessageService.php  RecipientService.php
api/src/Domain/: Message.php  Recipient.php
hikvision-js/: .env.example  hikvision.js  index.js  package-lock.json  package.json
hikvision-rs/: .env.example  Cargo.toml  hikvision.rs
hikvision-rust/: .gitignore  Cargo.toml  hikvision.rs
xmpp/: package.json  xmpp.js
