[package]
name = "hikvision"
version = "0.0.1"
edition = "2021"

[features]
cli = []

[[bin]]
name = "hikvision"
path = "hikvision.rs"

[dependencies]
minidom = "0.15.0"
reqwest = {version = "0.11.11", features = ["blocking", "json"]}
serde = {version = "1.0.143", features = ["derive"]}
serde_json = {version = "1.0.83"}
async-std = { version = "1.12.0", features = ["tokio1", "attributes"]}
chrono = "0.4.22"
chrono-tz = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
base64 = "0.13.0"
http-auth-basic = "0.3.5"
thread_local = "1.1.4"
regex = "1.5.5"
google-jwt-auth = "0.2.1"
