[package]
name = "hikvision"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "hikvision"
path = "hikvision.rs"

[dependencies]
minidom = "0.15.0"
reqwest = {version = "0.11.11", features = ["blocking", "json"]}
serde = {version = "1.0.143", features = ["derive"]}
serde_json = {version = "1.0.83"}
async-std = { version = "1.12.0", features = ["tokio1"]}
chrono = "0.4.22"
chrono-tz = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
base64 = "0.13.0"